# RarBackuper

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  plan.md
docs/superpowers/specs/: 2026-06-10-rarbackuper-design.md
res/: app.manifest  app.rc  make-icon.ps1
src/cli/: CliMain.cpp  CliMain.h
src/core/: ArchiveName.cpp  ArchiveName.h  DetectorCatalog.cpp  DetectorCatalog.h  ExcludeRules.cpp  ExcludeRules.h  RarCommandLine.cpp  RarCommandLine.h  RarExitCodes.cpp  RarExitCodes.h  RarOutputParser.cpp  RarOutputParser.h  SettingsModel.cpp  SettingsModel.h  Text.cpp  Text.h
src/engine/: EventSink.h  MetaCollector.cpp  MetaCollector.h  RarDiscovery.cpp  RarDiscovery.h  RarRunner.cpp  RarRunner.h  Settings.cpp  Settings.h
src/engine/detectors/: Bookmarks.cpp  Detectors.h  DriveInventory.cpp  ImportantStuff.cpp  SystemInfo.cpp
src/win/: App.cpp  ExcludeDialog.cpp  ExcludeDialog.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  Theme.cpp  Theme.h
tests/: test_archive_name.cpp  test_command_line.cpp  test_detector_catalog.cpp  test_discovery_settings.cpp  test_exclude_rules.cpp  test_exit_codes.cpp  test_integration_rar.cpp  test_output_parser.cpp  test_settings_model.cpp
